--- a/pom.xml
+++ b/pom.xml
@@ -12,10 +12,10 @@
     <maven.compiler.target>11</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <quarkus-plugin.version>1.7.3.Final</quarkus-plugin.version>
+    <quarkus-plugin.version>1.10.2.Final</quarkus-plugin.version>
     <quarkus.platform.artifact-id>quarkus-universe-bom</quarkus.platform.artifact-id>
     <quarkus.platform.group-id>io.quarkus</quarkus.platform.group-id>
-    <quarkus.platform.version>1.7.3.Final</quarkus.platform.version>
+    <quarkus.platform.version>1.10.2.Final</quarkus.platform.version>
     <surefire-plugin.version>3.0.0-M5</surefire-plugin.version>
     <apicurio.version>1.2.2.Final</apicurio.version>
   </properties>
@@ -57,6 +57,7 @@
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-avro</artifactId>
     </dependency>
+
     <dependency>
       <groupId>io.apicurio</groupId>
       <artifactId>apicurio-registry-utils-serde</artifactId>
@@ -67,6 +68,11 @@
           <artifactId>jboss-interceptors-api_1.2_spec</artifactId>
         </exclusion>
       </exclusions>
+    </dependency>
+
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-rest-client</artifactId>
     </dependency>
   </dependencies>
   <build>
