--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,8 @@
     <quarkus.platform.group-id>io.quarkus</quarkus.platform.group-id>
     <quarkus.platform.version>1.10.2.Final</quarkus.platform.version>
     <surefire-plugin.version>3.0.0-M5</surefire-plugin.version>
-    <apicurio.version>1.2.2.Final</apicurio.version>
+    <apicurio.version>1.3.2.Final</apicurio.version>
+    <quarkiverse.apicurio.version>0.0.1</quarkiverse.apicurio.version>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -56,6 +57,12 @@
     <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-avro</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>io.quarkiverse.apicurio</groupId>
+      <artifactId>quarkiverse-apicurio-registry-client</artifactId>
+      <version>${quarkiverse.apicurio.version}</version>
     </dependency>
 
     <dependency>
